# committer-rs

./: Cargo.toml  README.md  build.rs
src/: commands.rs  commit_generator.rs  config.rs  lib.rs  main.rs  prompt_generator.rs
src/clients/: claude.rs  mod.rs
src/generators/: codet5.rs  embedded.rs  mod.rs  remote.rs
src/git/: commit.rs  mod.rs  repo_interface.rs
