[package]
name = "committer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anthropic = "0.0.8"
anyhow = "1.0.97"
chrono = "0.4.34"
clap = "4.5.34"
git2 = "0.20.1"
home = "0.5.11"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_yaml = "0.9.34"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
